arrs/bazarr/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
  namespace: arr
spec:
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name: arr-pod
        image: linuxserver/bazarr
        ports:
        - containerPort: 6767
          name: http
        volumeMounts:
        - name: movies 
          mountPath: /movies
        - name: shows 
          mountPath: /shows
        - name: anime 
          mountPath: /anime
        - name: downloads
          mountPath: /downloads
        - name: config 
          mountPath: /config
      volumes:
      - name: config
        hostPath:
          path: /opt/mediaservices/bazarr
      - name: movies 
        hostPath:
          path: /mnt/nas/Movies
      - name: shows 
        hostPath:
          path: /mnt/nas/Series
      - name: anime 
        hostPath:
          path: /mnt/nas/Anime
      - name: downloads 
        hostPath:
          path: /mnt/downloads
---
