arrs/bazarr/ingress-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: arr
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`bazarr.local.net`)
      middlewares:
        - name: oauth2-proxy-oauth2-proxy@kubernetescrd
      services:
        - name: bazarr-svc
          port: 80
